# Ifmo-Works

./: .gitignore  README.md
Algorithms/Work 2/: CMakeLists.txt  taskA.cpp  taskC.cpp  taskD.cpp
Algorithms/Work 3/: CMakeLists.txt  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskE.cpp  taskF.cpp
Algorithms/Work 4/: CMakeLists.txt  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskF.cpp
Algorithms/Work 5/: CMakeLists.txt  example.cpp  taskA.cpp
Algorithms/Work 6/: CMakeLists.txt  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskE.cpp  taskG.cpp
Algorithms/Work 7/: CMakeLists.txt  another.cpp  taskB.cpp
Algorithms/Work 8/: CMakeLists.txt  taskA.cpp  taskB.cpp  taskC.cpp
DB/: README.md
DB/Work 1/: 3-11.sql  3-12.sql  3-2.sql  3-3.sql  3-4.sql  3-6.sql  3-7.sql  Lab1.doc
DB/Work 2/: 3-2.sql  3-3.sql  3-4.sql  3-7.sql  Lab2.doc
DatabaseDesign/: M3209_НовопашинАлексейАлександрович_Этап4.docx  M3209_НовопашинАлексейАлександрович_Этап5.docx  M3209НовопашинАлексейАлександрович1.docx  Нотация Чена.graffle
DatabaseUsage/Work 1/: 1.sql  10.sql  12.sql  2.sql  5.sql  6.sql  7.sql  9.sql
DatabaseUsage/Work 2/: 1.sql  10.sql  12.sql  13.sql  14.sql  2.sql  5.sql  9.sql
DatabaseUsage/Work 3/: 1.sql  5.sql  8.sql
DatabaseUsage/Work 4/: 1.sql  10.sql  2.sql  5.sql  6.sql  7.sql  9.sql  Условие.doc
DatabaseUsage/Work 5/: 1.sql  3.sql  7.sql
Databases/: README.md
Databases/Work 1/: 11.sql  13.sql  14.sql  15.sql  3-1.sql  3-10.sql  3-13.sql  3-14.sql  3-15.sql  3-4.sql  3-5.sql  (+5 more)
Ecology/: Опустынивание.docx
OOP/: .gitignore
OS/: .gitignore
Programming/Cpp/Work 3/: CMakeLists.txt  main.cpp
Programming/Cpp/Work 3/builder/: Airplane.h
Programming/Cpp/Work 3/factory/: MacGUI.cpp  WindowsGUI.h
Programming/Cpp/Work 3/factory/items/: MacButton.h  MacCheckbox.h  MacMessageBox.h  WindowsMessageBox.h
Programming/Cpp/Work 3/memento/: Calculator.h  CalculatorOriginator.h  Memento.h
Programming/Cpp/Work 4-1/: CMakeLists.txt  main.cpp
Programming/Works/: CMakeLists.txt  Works.sln  coordinate.h  pentagon.c  pentagon.h  vector.c  vector.h  work1.c  work10.c  work11.c  work12.c  work2.c  work3.c  work4.c  work5.c  work6.c  work7.c  work8.c  work9.c
Programming/Works/Work1/: Source.c  Work1.vcxproj
Programming/Works/Work2/: Source.c  Work2.vcxproj
Programming/Works/Work3/: Source.c  Source.cpp  Work3.vcxproj
Programming/Works/Work4/: Source.c  Source.cpp  Work4.vcxproj
Programming/Works/Work5/: Source.c  Work5.vcxproj
Programming/Works/Work6/: Source.cpp  Work6.vcxproj
Programming/Works/Work7/: Source.cpp  Work7.vcxproj
(+300 files in other folders)
