cmake_minimum_required(VERSION 3.8)
project(Works)

set(CMAKE_C_STANDARD 11)

add_executable(Work1 work1.c)
add_executable(Work2 work2.c)
add_executable(Work3 work3.c)
add_executable(Work4 work4.c)
add_executable(Work5 work5.c)
add_executable(Work6 work6.c)
add_executable(Work7 work7.c)
add_executable(Work8 work8.c)
add_executable(Work9 work9.c)